integrating ALL of the UI - hackly

--- a/public/index.less
+++ b/public/index.less
@@ -43,12 +43,12 @@ body{
 					text-transform: uppercase;
 				}
 				.save-button{
-					color: red;
+					color: #333;
 				}
 				.send-button{
-					color: 'red';
+					background: #3498DB;
+					color: #fff;
 				}
-
 				.share-button{
 					background: #3498DB;
 					color: #fff;
